--- a/index.html
+++ b/index.html
@@ -11,77 +11,11 @@
   </head>
   <body>
     <div id="wrapper">
-      <div class="ui grid stackable">
-        <div class="row">
-          <div class="column three wide">
-            <div id="sidebar">
-              <h1><a id="logo" href="/" title="Home"><span class="hidden">Home</span><img class="ui image fluid" src="/assets/logo.png"></a>
-                <div class="ui secondary stackable vertical menu"><a class="item" href="/projects.html">Projects</a><a class="item" href="/about.html">About</a><a class="item" href="/press.html">Press</a><a class="item" href="https://www.redbubble.com/people/openstudios/shop?asc=u" target="_new" title="Launch our RedBubble store">Store&nbsp;&nbsp;&nbsp;<span><i class="icon external alternate"></i></span></a><a class="item" href="/donate.html"><strong>Donate</strong></a>
-                  <div class="item">
-                    <div class="ui one column grid">
-                      <div class="row center aligned">
-                        <div class="column">
-                          <p> </p>
-                          <p> </p>
-                          <p>Connect with us</p>
-                        </div>
-                      </div>
-                      <div class="row center aligned">
-                        <div class="column"><a href="https://www.facebook.com/openstudiosco" title="Facebook"><i class="icon facebook large black"></i></a>
-                          <div class="ui vertical divider"></div><a href="https://www.linkedin.com/company/38109426/" title="LinkedIn"><i class="icon linkedin large black"></i></a>
-                          <div class="ui vertical divider"></div><a href="https://twitter.com/OpenStudios1" title="Twitter"><i class="icon twitter large black"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </h1>
-            </div>
-          </div>
-          <div class="column thirteen wide" id="container">
-            <div id="bottom_left">
-              <div class="overlay">
-                <h3>Welcome to Open Studios!</h3>
-                <p>
-                  An independent game studio that uses open source and web technology
-                  to deliver cutting edge experiences for gamers and developers.
-                </p>
-              </div>
-            </div>
-            <div id="top_left"><a href="/projects#kamigen">
-                <video width="400" height="400" autoplay="true" muted="muted">
-                  <source src="/assets/kamigen.mp4" type="video/mp4" loop="true">
-                </video>
-                <div class="overlay">
-                  <h3>Kamigen</h3>
-                  <p>
-                    Kamigen is a tropical cyberpunk (science fiction) world with aircraft combat.
-                    Play the game or catch up on the story in the comics.
-                  </p>
-                </div></a></div>
-            <div id="top_right"><a href="/projects#kettlefish">
-                <video width="400" height="400" autoplay="true" muted="muted">
-                  <source src="/assets/kettlefish.mp4" type="video/mp4" loop="true">
-                </video>
-                <div class="overlay">
-                  <h3>Kettlefish</h3>
-                  <p>
-                    An opinionated boilerplate to create static websites. Out of the
-                    box Kettlefish comes with a default homepage but it has many uses.
-                  </p>
-                </div></a></div>
-            <div id="bottom_right"><a href="/projects#manifold">
-                <video width="400" height="400" autoplay="true" muted="muted">
-                  <source src="/assets/manifold.mp4" type="video/mp4" loop="true">
-                </video>
-                <div class="overlay">
-                  <h3>Manifold</h3>
-                  <p>
-                    A hybrid 2D/3D design tool for indie game developers; fast and 
-                    efficient modelling for Three.JS scenes.
-                  </p>
-                </div></a></div>
-          </div>
+      <div class="ui container">
+        <div class="ui basic center aligned segment">
+          <h2 class="ui inverted header">New website coming soon.</h2>
+          <h1 style="display: inline-block;"><a id="logo" href="/" title="Home"><span class="hidden">Home</span><img class="ui image small" src="/assets/wlogo.png" title="Open Studios logo"></a></h1>
+          <div class="ui horizontal divider"></div><a href="https://www.facebook.com/openstudiosco" title="Facebook"><i class="icon facebook large inverted"></i></a><a href="https://www.linkedin.com/company/38109426/" title="LinkedIn"><i class="icon linkedin large inverted"></i></a><a href="https://twitter.com/OpenStudios1" title="Twitter"><i class="icon twitter large inverted"></i></a>
         </div>
       </div>
     </div>
@@ -96,81 +30,166 @@
         gl_Position = vec4( position, 1.0 );
       }
     </script>
-    <script id="fs" type="not-js">precision highp float;
+    <script id="fs" type="not-js">// Forked from: https://www.shadertoy.com/view/NsS3Dt
 
-uniform vec2 resolution;
+#ifdef GL_ES
+precision mediump float;
+#endif
+
 uniform float time;
-uniform vec2 mouse;
+uniform vec2 resolution;
 
-float random (in vec2 point) {
-  return fract(100.0 * sin(point.x + fract(100.0 * sin(point.y)))); // http://www.matteo-basei.it/noise
+float vec_smootherstep(float edge0, float edge1, float x) {
+  float t = clamp(((x - edge0) / (edge1 - edge0)), 0.0, 1.0);
+  return (((t * t) * t) * ((t * ((t * 6.0) - 15.0)) + 10.0));
 }
-
-float noise (in vec2 st) {
-  vec2 i = floor(st);
-  vec2 f = fract(st);
-
-  float a = random(i);
-  float b = random(i + vec2(1., 0.));
-  float c = random(i + vec2(0., 1.));
-  float d = random(i + vec2(1., 1.));
-
-  vec2 u = f * f * (3. - 2. * f);
-
-  return mix(a, b, u.x) + (c - a)* u.y * (1.0 - u.x) + (d - b) * u.x * u.y;
+vec2 sincos(float x) {
+  return vec2(sin(x), cos(x));
 }
-
-#define octaves 10
-
-float fbm (in vec2 p) {
-  float value = 0.;
-  float freq = 1.;
-  float amp = .5;
-
-  for (int i = 0; i < octaves; i++) {
-    value += amp * (noise((p - vec2(1.)) * freq));
-    freq *= 1.9;
-    amp *= .6;
+float noise_hash1_2(vec2 v) {
+  vec3 v3 = v.xyx;
+  v3 = fract((v3 * 0.1031));
+  v3 = (v3 + dot(v3, (v3.yzx + 33.33)));
+  return fract(((v3.x + v3.y) * v3.z));
+}
+vec2 noise_hash2_1(vec2 v) {
+  vec3 v3 = v.xyx;
+  v3 = (v3 * vec3(0.1031, 0.103, 0.0973));
+  v3 = (v3 + dot(v3, (v3.yzx + 33.33)));
+  return fract(((v3.xx + v3.yz) * v3.zy));
+}
+float noise_noisemix2(float a, float b, float c, float d, vec2 f) {
+  vec2 u = ((f * f) * (3.0 - (2.0 * f)));
+  return mix(mix(a, b, u.x), mix(c, d, u.x), u.y);
+}
+float noise_value_1(vec2 p) {
+  vec2 i = floor(p);
+  vec2 f = fract(p);
+  vec2 I = floor((i + 1.0));
+  float a = noise_hash1_2(i);
+  float b = noise_hash1_2(vec2(I.x, i.y));
+  float c = noise_hash1_2(vec2(i.x, I.y));
+  float d = noise_hash1_2(I);
+  return noise_noisemix2(a, b, c, d, f);
+}
+float noise_gradient_1(vec2 p) {
+  vec2 i = floor(p);
+  vec2 f = fract(p);
+  vec2 I = floor((i + 1.0));
+  vec2 F = (f - 1.0);
+  float a = dot((-0.5 + noise_hash2_1(i)), f);
+  float b = dot((-0.5 + noise_hash2_1(vec2(I.x, i.y))), vec2(F.x, f.y));
+  float c = dot((-0.5 + noise_hash2_1(vec2(i.x, I.y))), vec2(f.x, F.y));
+  float d = dot((-0.5 + noise_hash2_1(I)), F);
+  return (0.5 + noise_noisemix2(a, b, c, d, f));
+}
+vec3 colorgrade_tonemap_aces(vec3 col) {
+  return clamp(((col * ((2.51 * col) + 0.03)) / ((col * ((2.43 * col) + 0.59)) + 0.14)), 0.0, 1.0);
+}
+vec3 colorgrade_saturate(vec3 col, float sat) {
+  float grey = dot(col, vec3(0.2125, 0.7154, 0.0721));
+  return (grey + (sat * (col - grey)));
+}
+vec3 colorgrade_tone_1(vec3 col, vec3 gain, vec3 lift, vec3 invgamma) {
+  col = pow(col, invgamma);
+  return (((gain - lift) * col) + lift);
+}
+vec3 colorgrade_gamma_correction(vec3 col) {
+  return ((1.12661 * sqrt(col)) - (0.12661 * col));
+}
+vec3 colorgrade_vignette(vec3 col, vec2 coord, float strength, float amount) {
+  return (col * ((1.0 - amount) + (amount * pow(((((16.0 * coord.x) * coord.y) * (1.0 - coord.x)) * (1.0 - coord.y)), strength))));
+}
+vec3 colorgrade_dither(vec3 col, vec2 coord, float amount) {
+  return clamp((col + (noise_hash1_2(coord) * amount)), 0.0, 1.0);
+}
+vec3 camera_perspective(vec3 lookfrom, vec3 lookat, float tilt, float vfov, vec2 uv) {
+  vec2 sc = sincos(tilt);
+  vec3 vup = vec3(sc.x, sc.y, 0.0);
+  vec3 w = normalize((lookat - lookfrom));
+  vec3 u = normalize(cross(w, vup));
+  vec3 v = cross(u, w);
+  float wf = (1.0 / tan((vfov * 0.00872664626)));
+  return normalize((((uv.x * u) + (uv.y * v)) + (wf * w)));
+}
+float demos_redlandscape_fbm_terrain(vec2 p) {
+  float a = 1.0;
+  float t = 0.0;
+  for(int i = 0; i < 4; i++) {
+    t = (t + (a * noise_value_1(p)));
+    a = (a * 0.5);
+    p = (2.0 * p);
   }
-
-  return value;
+  return t;
 }
-
-float pattern(in vec2 p) {
-  vec2 offset = vec2(-.5);
-
-  vec2 aPos = vec2(sin(time * .05), sin(time * .1)) * 6.;
-  vec2 aScale = vec2(3.);
-  float a = fbm(p * aScale + aPos);
-
-  vec2 bPos = vec2(sin(time * .1), sin(time * .1)) * 1.;
-  vec2 bScale = vec2(.5);
-  float b = fbm((p + a) * bScale + bPos);
-
-  vec2 cPos = vec2(-.6, -.5) + vec2(sin(-time * .01), sin(time * .1)) * 2.;
-  vec2 cScale = vec2(2.);
-  float c = fbm((p + b) * cScale + cPos);
-
-  return c;
+float demos_redlandscape_map(vec3 p) {
+  vec2 q = p.xz;
+  float h = (demos_redlandscape_fbm_terrain(q) * 0.5);
+  float d = ((p.y + (h * 0.75)) + 0.0);
+  return (d * 0.5);
 }
-
-vec3 palette(in float t) {
-  vec3 a = vec3(.5, .5, .5);
-  vec3 b = vec3(.45, .25, .14);
-  vec3 c = vec3(1. ,1., 1.);
-  vec3 d = vec3(0., .1, .2);
-
-  return a + b * cos(6.28318 * (c * t + d));
+float demos_redlandscape_ray_march(vec3 ro, vec3 rd) {
+  float t = 0.0;
+  for(int i = 0; i < 256; i++) {
+    vec3 p = (ro + (t * rd));
+    float d = demos_redlandscape_map(p);
+    if((d < (0.003 * t)) || (t >= 25.0)) {
+      break;
+    }
+    t += d;
+  }
+  return t;
 }
-
-void main() {
-  vec2 p = gl_FragCoord.xy / resolution.xy;
-  p.x *= resolution.x / resolution.y;
-
-  float value = pow(pattern(p), 2.);
-  vec3 color  = palette(value);
-
-  gl_FragColor = vec4(color, 1.);
+void main(void) {
+  vec2 uv = (gl_FragCoord.xy / resolution);
+  vec2 coord = ((4.0 * (gl_FragCoord.xy - (resolution * 0.5))) / resolution.y);
+  float z = (time * 0.20);
+  vec2 sc = sincos((time * 0.5));
+  float y = 0.0;
+  vec3 lookat = vec3(( 0.5), y, z);
+  vec3 ro = vec3(( 0.3), 0.0, (z - 2.0));
+  vec3 rd = camera_perspective(ro, lookat, 0.0, 45.0, coord);
+  vec3 col = vec3(0.0);
+  vec3 sun_dir = normalize(vec3(0.3, 0.07, 1.0));
+  vec3 hor_col = vec3(0.0, 0.3, 0.8);
+  vec3 sun_col = vec3(0.9, 0.8, 0.7);
+  vec3 bou_col = vec3(0.0, 0.3, 0.9);
+  float t = demos_redlandscape_ray_march(ro, rd);
+  vec3 p = (ro + (rd * t));
+  vec3 back_col = vec3(0.);
+  {
+    back_col = mix(hor_col, (hor_col * 0.3), vec_smootherstep(0.0, 0.25, rd.y));
+    back_col = mix(back_col, bou_col, max((0.1 - rd.y), 0.0));
+    float sun_lightness = max(dot(rd, sun_dir), 0.0);
+    back_col = (back_col + (sun_col * pow(sun_lightness, 2000.0)));
+    back_col = (back_col + ((0.3 * sun_col) * pow(sun_lightness, 100.0)));
+    back_col = (back_col + (vec3(0.3, 0.2, 0.1) * pow(sun_lightness, 4.0)));
+  }
+  if(t < 25.0) {
+    float decay = (1.0 - exp((-0.12 * t)));
+    col = mix(col, back_col, decay);
+  } else {
+    col = back_col;
+    float clouds_altitude = 1000.0;
+    float clouds_dist = ((1.0 - (ro.y / clouds_altitude)) / rd.y);
+    if(clouds_dist > 0.0) {
+      float clouds_zoom = 1.0;
+      vec2 clouds_pos = (ro.xz + ((rd.xz * clouds_dist) * clouds_zoom));
+      float clouds_lightness = max((noise_gradient_1(clouds_pos) - 0.3), 0.0);
+      float clouds_decay = vec_smootherstep(0.0, 0.3, rd.y);
+      vec3 clouds_col = (2.0 * col);
+      col = mix(col, clouds_col, (clouds_lightness * clouds_decay));
+    }
+    col = clamp(col, 0.0, 1.0);
+  }
+  col = colorgrade_tonemap_aces(col);
+  col = colorgrade_gamma_correction(col);
+  col = colorgrade_tone_1(col, vec3(1.3, 0.9, 0.7), (vec3(0.5, 0.1, 0.1) * 0.1), vec3(3.0, 2.0, 1.2));
+  col = colorgrade_saturate(col, 0.7);
+  col = colorgrade_vignette(col, uv, 0.25, 0.7);
+  col = colorgrade_dither(col, gl_FragCoord.xy, 0.01);
+  gl_FragColor = vec4(col, 1.0);
+  gl_FragColor *= 0.85;
 }
     </script>
     <script>
