--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       {
         "imports": {
           "three": "https://unpkg.com/three@v0.153.0/build/three.module.js",
-          "three/addons/": "https://unpkg.com/three@v0.153.0/examples/jsm/"
+          "three/addons/": "https://unpkg.com/three@v0.153.0/examples/jsm/",
+					"three-mesh-bvh": "https://unpkg.com/three-mesh-bvh@^0.5.22/build/index.module.js",
+					"three-bvh-csg": "https://unpkg.com/three-bvh-csg@^0.0.4/build/index.module.js"
         }
       }
     </script>
