--- a/index.html
+++ b/index.html
@@ -23,11 +23,39 @@
         }
       }
     </script>
+		<style>
+			body {
+				background-color: #ffffff;
+				margin: 0;
+				padding: 0;
+			}
+
+			#css,
+			#webgl {
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: 0;
+				display: block;
+			}
+
+			#css {
+				background: white;
+			}
+
+			#webgl {
+				pointer-events: none;
+			}
+
+		</style>
 	</head>
 	<body>
 		<noscript>
 			This website requires Javascript for the full experience. As you don't have Javascript enabled, you are seeing the 1999 experience.
 		</noscript>
+		<div id="css"></div>
+    <div id="webgl"></div>
 		<script type="module" src="./app.js"></script>
 	</body>
 </html>
