Correcting camera z pos from backwall click, video placeholder

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -134,6 +134,7 @@
       </ul>
     </div>
     <div class="content">
+      <h2>VIDEO PLACEHOLDER</h2>
       <h3>Humble beginnings</h3>
       <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
         applications, and digital products.</p>
