--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -28,7 +28,7 @@
     h1 {
       font-family: Stigmature, "Brush Script MT", cursive;
       color: #FF69CB;
-      
+      text-shadow: 10px 10px 10px #540037;
       text-align: center;
       font-size: 8rem;
       margin: 4rem 0 2rem;
@@ -201,7 +201,7 @@
         <li><a href="./contact_us.html">Contact Us</a></li>
       </ul>
     </div>
-    <h1>About us</h1>
+    <h1>about us</h1>
     <div class="content">
 
       <div class="column">
