Adding 1999.css file, about us tweaks and WIP for case studies page

--- a/pages/case_studies.html
+++ b/pages/case_studies.html
@@ -3,155 +3,74 @@
 
 <head>
   <title>Case studies - Open Studios</title>
-  <style>
-    /* Add your CSS styles here */
-    /* Example styles for the layout */
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #FFF;
-    }
-
-    .line {
-      border: none;
-      border-top: 4px solid #FFDFFF;
-      position: absolute;
-      left:0;
-      right: 0;
-      z-index: 0;
-    }
-    .line:nth-child(1) {
-      top: 27.5%;
-    }
-    .line:nth-child(2) {
-      top: 32.5%;
-    }
-    .line:nth-child(3) {
-      top: 37.5%;
-    }
-    .line:nth-child(4) {
-      top: 42.5%;
-    }
-
-    #page-wrapper {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      overflow-x: hidden;
-    }
-
-    .header, .menu, .content, .footer {
-      position: relative;
-    }
-
-    .header {
-      text-align: center;
-      min-height: 200px;
-    }
-
-    .header h1 {
-      margin: 0;
-      position: relative;
-      z-index: 1;
-    }
-
-    .header img {
-      background-color: #000;
-      max-height: 15vh;
-      width: auto;
-    }
-
-    .menu {
-      margin: 1rem;
-      border-top: solid 4px #FFDFFF;
-      border-bottom: solid 4px #FFDFFF;
-      color: #fff;
-      text-align: center;
-    }
-
-    .menu li {
-      display: inline-block;
-      font-size: 1.5rem;
-      margin-left: 0.5rem;
-      margin-right: 0.5rem;
-    }
-
-    .menu a {
-      color: #01CDFE;
-      text-decoration: none;
-    }
-
-    .menu a.active {
-      color: #ffffff;
-    }
-
-    .content {
-      margin: 2rem;
-      max-width: 960px;
-    }
-
-    .footer {
-      min-height: 200px;
-    }
-
-
-    @media screen and (min-width: 960px) {
-      #page-wrapper {
-        align-items: center;
-      }
-      .header, .menu, .content, .footer {
-        width: calc(100vh * 4/3);
-      }
-
-      .menu li {
-        margin-left: 1.5rem;
-        margin-right: 1.5rem;
-      }
-    }
-  </style>
+  <link href="./1999.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="page-wrapper">
     <div class="header">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <h1>
-        <a href="#"><img src="../logo-wide.png" alt="Logo"></a>
-      </h1>
+      <div class="lineset first">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
+      <div class="h1">
+        <a href="#" title="Home"><img src="../logo-wide.png" alt="Logo"></a>
+      </div>
+      <div class="lineset second">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
     </div>
-    <div class="menu">
-      <ul>
-        <li><a href="./about_us.html">About Us</a></li>
-        <li><a href="./services.html">Services</a></li>
-        <li><a class="active" href="#">Case Studies</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./contact_us.html">Contact Us</a></li>
-      </ul>
-    </div>
+    <noscript>
+      <div class="menu">
+        <ul>
+          <li><a class="active" href="./about_us.html">About Us</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./case_studies.html">Case Studies</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./contact_us.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </noscript>
+    <h1>Case Studies</h1>
     <div class="content">
-      <h3>Garrett Ray Jewellery - competitor analysis</h3>
-      <p>Original work
-        - Brand
-        - Website
-        - Socials
-    - Audit/competitor report
-    - How we implemented the report and got into B Vogue</p>
-      <h3>‘This website’</h3>
-      <p>Why it’s called Open Studios
-        Design concept
-        How it’s a virtual tour of the business
+      <div class="row">
+      <div class="column">
+        <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+      </div>
+      <div class="column">
+        <h3>Garrett Ray Jewellery - competitor analysis</h3>
+        <p>Original work
+          - Brand
+          - Website
+          - Socials
+          - Audit/competitor report
+          - How we implemented the report and got into B Vogue</p>
+        <h3>‘This website’</h3>
+        <p>Why it’s called Open Studios
+          Design concept
+          How it’s a virtual tour of the business
         </p>
+      </div>
     </div>
+  </div>
     <div class="footer">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
+      <div class="lineset second">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
+      <div class="lineset first">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
     </div>
   </div>
 
