--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -3,174 +3,7 @@
 
 <head>
   <title>About us - Open Studios</title>
-  <style>
-    @font-face {
-      font-family: SourceSans;
-      src: url(../fonts/SourceSans3-Light.woff);
-      src: url(../fonts/SourceSans3-Light.woff2);
-    }
-    @font-face {
-      font-family: Stigmature;
-      src: url(../fonts/Stigmature.otf);
-    }
-    @font-face {
-      font-family: VeraMono;
-      src: url(../fonts/VeraMono.woff);
-      src: url(../fonts/VeraMono.woff2);
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: SourceSans, Arial, sans-serif;
-      background-color: #000;
-      color: #FFF;
-    }
-    h1 {
-      font-family: Stigmature, "Brush Script MT", cursive;
-      color: #FF69CB;
-      text-shadow: 10px 10px 10px #540037;
-      text-align: center;
-      font-size: 8rem;
-      margin: 4rem 0 2rem;
-    }
-
-    h3 {
-      font-family: VeraMono, Verdana, Geneva, Tahoma, sans-serif;
-      color: #FF69CB;
-    }
-
-    .line {
-      border: none;
-      border-top: 4px solid #FFDFFF;
-      position: absolute;
-      left:0;
-      right: 0;
-      z-index: 0;
-    }
-
-    .line:nth-child(1) {
-      top: 27.5%;
-  }
-    .line:nth-child(2) {
-      top: 32.5%;
-    }
-    .line:nth-child(3) {
-      top: 37.5%;
-    }
-    .line:nth-child(4) {
-      top: 42.5%;
-    }
-
-    .lineset.first .line {
-      right: 49.9%;
-      transform: rotate(5deg);
-    }
-
-    .lineset.second .line {
-      left: 49.9%;
-      transform: rotate(-5deg);
-    }
-
-    #page-wrapper {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      overflow-x: hidden;
-    }
-
-    .header, .menu, .content, .footer {
-      position: relative;
-    }
-
-    .header {
-      text-align: center;
-      min-height: 200px;
-    }
-
-    .header .h1 {
-      margin: 0;
-      position: relative;
-      z-index: 1;
-    }
-
-    .header img {
-      background: rgb(0,0,0);
-      background: radial-gradient(circle, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 60%);
-      max-height: 25vh;
-      width: auto;
-    }
-
-    .menu {
-      margin: 1rem;
-      border-top: solid 4px #FFDFFF;
-      border-bottom: solid 4px #FFDFFF;
-      color: #fff;
-      text-align: center;
-    }
-
-    .menu li {
-      display: inline-block;
-      font-family: VeraMono, Verdana, Geneva, Tahoma, sans-serif;
-      font-size: 1.5rem;
-      margin-top: 0.25rem;
-      margin-bottom: 0.25rem;
-      margin-left: 0.5rem;
-      margin-right: 0.5rem;
-    }
-
-    .menu a {
-      color: #01CDFE;
-      text-decoration: none;
-    }
-
-    .menu a.active {
-      color: #ffffff;
-    }
-
-    .content {
-      display: flex;
-      flex-direction: row;
-      margin: 2rem;
-      max-width: 960px;
-    }
-
-    .content .column {
-      width: calc(45%);
-      margin: 0 2.5%;
-    }
-
-    .footer {
-      min-height: 266px;
-    }
-
-
-    @media screen and (min-width: 960px) {
-      #page-wrapper {
-        align-items: center;
-      }
-      .header, .menu, .content, .footer {
-        width: 100vw;
-      }
-
-      .menu li {
-        margin-left: 1.5rem;
-        margin-right: 1.5rem;
-      }
-      
-      .line:nth-child(1) {
-        top: 17.5%;
-      }
-      .line:nth-child(2) {
-        top: 22.5%;
-      }
-      .line:nth-child(3) {
-        top: 27.5%;
-      }
-      .line:nth-child(4) {
-        top: 32.5%;
-      }
-    }
-  </style>
+  <link href="./1999.css" rel="stylesheet">
 </head>
 
 <body>
@@ -192,32 +25,41 @@
         <hr class="line">
       </div>
     </div>
-    <div class="menu">
-      <ul>
-        <li><a class="active" href="./about_us.html">About Us</a></li>
-        <li><a href="./services.html">Services</a></li>
-        <li><a href="./case_studies.html">Case Studies</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./contact_us.html">Contact Us</a></li>
-      </ul>
-    </div>
-    <h1>about us</h1>
-    <div class="content">
-
-      <div class="column">
-        <h2>VIDEO PLACEHOLDER</h2>
-        <h3>Humble beginnings</h3>
-        <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
-          applications, and digital products.</p>
+    <noscript>
+      <div class="menu">
+        <ul>
+          <li><a class="active" href="./about_us.html">About Us</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./case_studies.html">Case Studies</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./contact_us.html">Contact Us</a></li>
+        </ul>
       </div>
-      <div class="column">
-        <h3>Garrett Kinder - Owner</h3>
-        <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
-          and
-          frameworks like Vue.</p>
-        <h3>Paul Brzeski - Owner</h3>
-        <p>Offer the creation of interactive media content, immersive experiences, interactive installations, or
-          multimedia presentations for events or marketing campaigns.</p>
+    </noscript>
+    <h1>About Us</h1>
+    <div class="content">
+      <div class="row center">
+        <div class="big-column">
+          <h2>VIDEO PLACEHOLDER</h2>
+          <h3>Humble beginnings</h3>
+          <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
+            applications, and digital products.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div style="background-color: blue; width: 100%; height: 100%;">Image placeholder</div>
+          <h3>Garrett Kinder - Owner</h3>
+          <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
+            and
+            frameworks like Vue.</p>
+        </div>
+        <div class="column">
+          <div style="background-color: blue; width: 100%; height: 100%;">Image placeholder</div>
+          <h3>Paul Brzeski - Owner</h3>
+          <p>Offer the creation of interactive media content, immersive experiences, interactive installations, or
+            multimedia presentations for events or marketing campaigns.</p>
+        </div>
       </div>
     </div>
     <div class="footer">
