Finished laying out case studies page

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>About us - Open Studios</title>
-  <link href="./1999.css" rel="stylesheet">
+  <link href="./1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -31,7 +31,7 @@
           <li><a class="active" href="./about_us.html">About Us</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./case_studies.html">Case Studies</a></li>
-          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact_us.html">Contact Us</a></li>
         </ul>
       </div>
@@ -40,10 +40,10 @@
     <div class="content">
       <div class="row center">
         <div class="big-column">
-          <h2>VIDEO PLACEHOLDER</h2>
-          <h3>Humble beginnings</h3>
           <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
             applications, and digital products.</p>
+          <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
+            and frameworks like Vue.</p>
         </div>
       </div>
       <div class="row">
@@ -51,8 +51,7 @@
           <div style="background-color: blue; width: 100%; height: 100%;">Image placeholder</div>
           <h3>Garrett Kinder - Owner</h3>
           <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
-            and
-            frameworks like Vue.</p>
+            and frameworks like Vue.</p>
         </div>
         <div class="column">
           <div style="background-color: blue; width: 100%; height: 100%;">Image placeholder</div>
