--- a/pages/case_studies.html
+++ b/pages/case_studies.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Case studies - Open Studios</title>
-  <link href="./1999.css" rel="stylesheet">
+  <link href="./1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -31,7 +31,7 @@
           <li><a class="active" href="./about_us.html">About Us</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./case_studies.html">Case Studies</a></li>
-          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="./contact_us.html">Contact Us</a></li>
         </ul>
       </div>
@@ -39,25 +39,44 @@
     <h1>Case Studies</h1>
     <div class="content">
       <div class="row">
-      <div class="column">
-        <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+        </div>
+        <div class="column">
+          <h3>Garrett Ray Jewellery - competitor analysis</h3>
+          <p>Original work
+            - Brand
+            - Website
+            - Socials
+            - Audit/competitor report
+            - How we implemented the report and got into B Vogue</p>
+        </div>
       </div>
-      <div class="column">
-        <h3>Garrett Ray Jewellery - competitor analysis</h3>
-        <p>Original work
-          - Brand
-          - Website
-          - Socials
-          - Audit/competitor report
-          - How we implemented the report and got into B Vogue</p>
-        <h3>‘This website’</h3>
-        <p>Why it’s called Open Studios
-          Design concept
-          How it’s a virtual tour of the business
-        </p>
+      <div class="row">
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+        </div>
+        <div class="column">
+          <h3>‘This website’</h3>
+          <p>Why it’s called Open Studios
+            Design concept
+            How it’s a virtual tour of the business
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+        </div>
+        <div class="column">
+          <h3>‘This website’</h3>
+          <p>Why it’s called Open Studios
+            Design concept
+            How it’s a virtual tour of the business
+          </p>
+        </div>
       </div>
     </div>
-  </div>
     <div class="footer">
       <div class="lineset second">
         <hr class="line">
