--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -3,125 +3,7 @@
 
 <head>
   <title>Contact us - Open Studios</title>
-  <style>
-    /* Add your CSS styles here */
-    /* Example styles for the layout */
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #FFF;
-    }
-
-    .line {
-      border: none;
-      border-top: 4px solid #FFDFFF;
-      position: absolute;
-      left: 0;
-      right: 0;
-      z-index: 0;
-    }
-
-    .line:nth-child(1) {
-      top: 27.5%;
-    }
-
-    .line:nth-child(2) {
-      top: 32.5%;
-    }
-
-    .line:nth-child(3) {
-      top: 37.5%;
-    }
-
-    .line:nth-child(4) {
-      top: 42.5%;
-    }
-
-    #page-wrapper {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      overflow-x: hidden;
-    }
-
-    .header,
-    .menu,
-    .content,
-    .footer {
-      position: relative;
-    }
-
-    .header {
-      text-align: center;
-      min-height: 200px;
-    }
-
-    .header h1 {
-      margin: 0;
-      position: relative;
-      z-index: 1;
-    }
-
-    .header img {
-      background-color: #000;
-      max-height: 15vh;
-      width: auto;
-    }
-
-    .menu {
-      margin: 1rem;
-      border-top: solid 4px #FFDFFF;
-      border-bottom: solid 4px #FFDFFF;
-      color: #fff;
-      text-align: center;
-    }
-
-    .menu li {
-      display: inline-block;
-      font-size: 1.5rem;
-      margin-left: 0.5rem;
-      margin-right: 0.5rem;
-    }
-
-    .menu a {
-      color: #01CDFE;
-      text-decoration: none;
-    }
-
-    .menu a.active {
-      color: #ffffff;
-    }
-
-    .content {
-      margin: 2rem;
-      max-width: 960px;
-    }
-
-    .footer {
-      min-height: 200px;
-    }
-
-
-    @media screen and (min-width: 960px) {
-      #page-wrapper {
-        align-items: center;
-      }
-
-      .header,
-      .menu,
-      .content,
-      .footer {
-        width: calc(100vh * 4/3);
-      }
-
-      .menu li {
-        margin-left: 1.5rem;
-        margin-right: 1.5rem;
-      }
-    }
-  </style>
+  <link href="./1999.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -140,7 +22,7 @@
         <li><a href="./about_us.html">About Us</a></li>
         <li><a href="./services.html">Services</a></li>
         <li><a href="./case_studies.html">Case Studies</a></li>
-        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
         <li><a class="active" href="#">Contact Us</a></li>
       </ul>
     </div>
