--- a/pages/services.html
+++ b/pages/services.html
@@ -129,7 +129,7 @@
         <li><a href="./about_us.html">About Us</a></li>
         <li><a class="active" href="#">Services</a></li>
         <li><a href="./case_studies.html">Case Studies</a></li>
-        <li><a href="./projects.html">Projects</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
         <li><a href="./contact_us.html">Contact Us</a></li>
       </ul>
     </div>
