Fixing clipping issues

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -48,13 +48,13 @@
       </div>
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: 100%; height: 100%;">Image placeholder</div>
+          <div style="background-color: blue; width: 100%; height: 400px;">Image placeholder</div>
           <h3>Garrett Kinder - Owner</h3>
           <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
             and frameworks like Vue.</p>
         </div>
         <div class="column">
-          <div style="background-color: blue; width: 100%; height: 100%;">Image placeholder</div>
+          <div style="background-color: blue; width: 100%; height: 400px;">Image placeholder</div>
           <h3>Paul Brzeski - Owner</h3>
           <p>Offer the creation of interactive media content, immersive experiences, interactive installations, or
             multimedia presentations for events or marketing campaigns.</p>
