--- a/pages/case_studies.html
+++ b/pages/case_studies.html
@@ -40,7 +40,7 @@
     <div class="content">
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+          <div style="background-color: blue; width: auto; height: 200px;">Image placeholder</div>
         </div>
         <div class="column">
           <h3>Garrett Ray Jewellery - competitor analysis</h3>
@@ -54,7 +54,7 @@
       </div>
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+          <div style="background-color: blue; width: auto; height: 200px;">Image placeholder</div>
         </div>
         <div class="column">
           <h3>‘This website’</h3>
@@ -66,7 +66,7 @@
       </div>
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 100%;">Image placeholder</div>
+          <div style="background-color: blue; width: auto; height: 200px;">Image placeholder</div>
         </div>
         <div class="column">
           <h3>‘This website’</h3>
