--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -2,43 +2,80 @@
 <html>
 
 <head>
-  <title>Projects - Open Studios</title>
+  <title>Portfolio - Open Studios</title>
   <link href="./1999.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="page-wrapper">
     <div class="header">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <h1>
-        <a href="#"><img src="../logo-wide.png" alt="Logo"></a>
-      </h1>
+      <div class="lineset first">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
+      <div class="h1">
+        <a href="#" title="Home"><img src="../logo-wide.png" alt="Logo"></a>
+      </div>
+      <div class="lineset second">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
     </div>
-    <div class="menu">
-      <ul>
-        <li><a href="./about_us.html">About Us</a></li>
-        <li><a href="./services.html">Services</a></li>
-        <li><a href="./case_studies.html">Case Studies</a></li>
-        <li><a class="active" href="#">Portfolio</a></li>
-        <li><a href="./contact_us.html">Contact Us</a></li>
-      </ul>
-    </div>
+    <noscript>
+      <div class="menu">
+        <ul>
+          <li><a href="./about_us.html">About Us</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./case_studies.html">Case Studies</a></li>
+          <li><a class="active" href="./portfolio.html">Portfolio</a></li>
+          <li><a href="./contact_us.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </noscript>
+    <h1>Portfolio</h1>
     <div class="content">
-      <h3>Creative</h3>
-      <h4>- Demonology</h4>
-      <h4>- Kamigen</h4>
-      <h3>Technical</h3>
-      <h4>- Kettlefish</h4>
-      <h4>- Manifold</h4>
+      <div class="row">
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+        </div>
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+        </div>
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+        </div>
+        <div class="column">
+          <div style="background-color: blue; width: auto; height: 400px;">Image placeholder</div>
+        </div>
+      </div>
     </div>
     <div class="footer">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
+      <div class="lineset second">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
+      <div class="lineset first">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
     </div>
   </div>
 
