--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -9,48 +9,74 @@
 <body>
   <div id="page-wrapper">
     <div class="header">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <h1>
-        <a href="#"><img src="../logo-wide.png" alt="Logo"></a>
-      </h1>
+      <div class="lineset first">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
+      <div class="h1">
+        <a href="#" title="Home"><img src="../logo-wide.png" alt="Logo"></a>
+      </div>
+      <div class="lineset second">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
     </div>
-    <div class="menu">
-      <ul>
-        <li><a href="./about_us.html">About Us</a></li>
-        <li><a href="./services.html">Services</a></li>
-        <li><a href="./case_studies.html">Case Studies</a></li>
-        <li><a href="./portfolio.html">Portfolio</a></li>
-        <li><a class="active" href="#">Contact Us</a></li>
-      </ul>
-    </div>
+    <noscript>
+      <div class="menu">
+        <ul>
+          <li><a href="./about_us.html">About Us</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./case_studies.html">Case Studies</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="./contact_us.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </noscript>
+    <h1>Contact us</h1>
     <div class="content">
-      <h3>Get in touch!</h3>
-      <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
-        applications, and digital products.</p>
-      <p>
-        <label for="fullname" type="text">Full Name</label><br>
-        <input name="fullname" type="text" />
-      </p>
-      <p>
-        <label for="email" type="text">Email</label><br>
-        <input name="email" type="text" />
-      </p>
-      <p>
-        <label for="message" type="text">Message</label><br>
-        <textarea name="message" cols="40"></textarea>
-      </p>
-      <p>
-        <input type="submit" />
-      </p>
+      <div class="row">
+        <div class="column">
+          <h3>Get in touch!</h3>
+          <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
+            applications, and digital products.</p>
+          <p>
+            <label for="fullname" type="text">Full Name</label><br>
+            <input name="fullname" type="text" />
+          </p>
+          <p>
+            <label for="email" type="text">Email</label><br>
+            <input name="email" type="text" />
+          </p>
+          <p>
+            <label for="message" type="text">Message</label><br>
+            <textarea name="message" cols="40"></textarea>
+          </p>
+          <p>
+            <input type="submit" />
+          </p>
+        </div>
+        <div class="column">
+          <div style="width: 100%"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d432906.06061080005!2d115.68138423281249!3d-32.04006389999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x83067246234c2221%3A0xf849d5152238a278!2sOpen%20Studios!5e0!3m2!1sen!2sau!4v1689330743016!5m2!1sen!2sau" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </div>
+      </div>
     </div>
     <div class="footer">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
-      <hr class="line">
+      <div class="lineset second">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
+      <div class="lineset first">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+        <hr class="line">
+      </div>
     </div>
   </div>
 
