--- a/index.html
+++ b/index.html
@@ -48,12 +48,24 @@
 				pointer-events: none;
 			}
 
+			#exitSign {
+				display: none;
+				background: #077f58;
+				border-radius: 1rem;
+				padding: 1rem;
+				position: absolute;
+				top: 2rem;
+				right: 2rem;
+				z-index: 10000;
+			}
+
 		</style>
 	</head>
 	<body>
 		<noscript>
 			This website requires Javascript for the full experience. As you don't have Javascript enabled, you are seeing the 1999 experience.
 		</noscript>
+		<a id="exitSign"><img src="./exit.svg" width="90" height="47.6" /></a>
 		<div id="css"></div>
     <div id="webgl"></div>
 		<script type="module" src="./app.js"></script>
