--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -40,24 +40,21 @@
     <div class="content">
       <div class="row center">
         <div class="big-column">
-          <p>Offer expertise in designing intuitive user interfaces and seamless user experiences for websites,
-            applications, and digital products.</p>
-          <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
-            and frameworks like Vue.</p>
+          <p>We're Open Studios, a multi disciplinary digital production studio.<br> Creating unique and meaningful experiences since 2019.<br>          
+            We are a husband and husband team, plus two dogs and a cat.</p>
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: 100%; height: 400px;">Image placeholder</div>
+          <img src="../garrett.png" style=" width: 100%; height: auto;" />
           <h3>Garrett Kinder - Owner</h3>
           <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
             and frameworks like Vue.</p>
         </div>
         <div class="column">
-          <div style="background-color: blue; width: 100%; height: 400px;">Image placeholder</div>
+          <img src="../paul.png" style=" width: 100%; height: auto;" />
           <h3>Paul Brzeski - Owner</h3>
-          <p>Offer the creation of interactive media content, immersive experiences, interactive installations, or
-            multimedia presentations for events or marketing campaigns.</p>
+          <p>A self taught technical and creative professional enjoying over 15 years in the industry.</p>
         </div>
       </div>
     </div>
