Updating profile pics

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -52,7 +52,7 @@
             and frameworks like Vue.</p>
         </div>
         <div class="column">
-          <img src="../paul.png" style=" width: 100%; height: auto;" />
+          <img src="../paul.jpg" style=" width: 100%; height: auto;" />
           <h3>Paul Brzeski - Owner</h3>
           <p>A self taught technical and creative professional enjoying over 15 years in the industry.</p>
         </div>
