--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 			background: black;
 			font-weight: bold;
 			color: #fff;
-			box-shadow: 0px 0px 5px 5px #077f58;
+			box-shadow: 0px 0px 5px 5px #00DD00;
 			text-shadow: 2.5px 2.5px 5px #999;
 			cursor: pointer;
 			display: none;
-			border: solid 1px #077f58;
+			border: solid 1px #00DD00;
 			border-radius: 1rem;
 			padding: 1rem;
 			position: absolute;
@@ -75,9 +75,14 @@
 			z-index: 10001;
 		}
 
+		#exitSign img {
+			max-width: min(180px, 10vw);
+			height: auto;
+		}
+
 		#exitSign:hover {
-			box-shadow: 0px 0px 7.5px 7.5px #75f7cd;
-			border-color: #75f7cd;
+			box-shadow: 0px 0px 7.5px 7.5px #00FF00;
+			border-color: #00FF00;
 		}
 	</style>
 </head>
@@ -87,7 +92,7 @@
 		This website requires Javascript for the full experience. As you don't have Javascript enabled, you are seeing
 		the 1999 experience.
 	</noscript>
-	<a id="exitSign">EXIT</a>
+	<a id="exitSign"><img src="./exit.svg" title="Return to the office" width="300" height="85" /></a>
 	<iframe id="pageOverlay"></iframe>
 	<div id="css"></div>
 	<div id="webgl"></div>
