Visual tweaks and WIP removal of SVG renderer

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		}
 
 		#pageOverlay {
+			border: 0 none;
 			display: none;
-			background: red;
 			z-index: 10000;
 		}
 
@@ -76,7 +76,7 @@
 		}
 
 		#exitSign img {
-			max-width: min(180px, 10vw);
+			max-width: min(80px, 10vw);
 			height: auto;
 		}
 
