--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
 	<style>
 		body {
-			background-color: #ffffff;
+			background-color: #000;
 			margin: 0;
 			padding: 0;
 		}
@@ -41,10 +41,6 @@
 			top: 0;
 			left: 0;
 			display: block;
-		}
-
-		#webgl {
-			pointer-events: none;
 		}
 
 		#pageOverlay {
