--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 			margin: 0;
 		}
 	</style>
-	<script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.9/dist/tweakpane.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/20.0.0/tween.umd.js"></script>
-	<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+	<script src="./vendor/tweakpane-3.1.10.min.js"></script>
+	<script src="./vendor/tween-21.0.0.umd.min.js"></script>
+	<script async src="./vendor/es-module-shims-1.8.0.js"></script>
 
 	<script type="importmap">
       {
         "imports": {
-          "three": "https://unpkg.com/three@v0.153.0/build/three.module.js",
-          "three/addons/": "https://unpkg.com/three@v0.153.0/examples/jsm/",
-					"three-mesh-bvh": "https://unpkg.com/three-mesh-bvh@^0.5.22/build/index.module.js",
-					"three-bvh-csg": "https://unpkg.com/three-bvh-csg@^0.0.4/build/index.module.js",
-					"virtual-office": "./virtual_office/main.js"
+			"three": "./vendor/three-0.153.0.module.min.js",
+			"three/addons/": "./vendor/addons-1.5.3/",
+			"three-mesh-bvh": "./vendor/three-mesh-bvh-0.5.24.module.js",
+			"three-bvh-csg": "./vendor/three-bvh-csg-0.0.4.module.js",
+			"virtual-office": "./virtual_office/main.js"
         }
       }
     </script>
