Adding case studies page base content and removing unused images

--- a/pages/case_studies.html
+++ b/pages/case_studies.html
@@ -40,39 +40,52 @@
     <div class="content">
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 200px;">Image placeholder</div>
+          <img src="./images/cs1.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
-          <h3>Garrett Ray Jewellery - competitor analysis</h3>
-          <p>Original work
-            - Brand
-            - Website
-            - Socials
-            - Audit/competitor report
-            - How we implemented the report and got into B Vogue</p>
+          <h3>This website</h3>
+          <p>We relaunched our studio brand looking to demonstrate our capabilities in terms of creativity and technical execution. But more importantly, this is our epicentre.</p>
+          <p>The new studio website is designed to cause shockwaves by being something different but also familiar. We want you to feel like you've walked into a real office where we do our work.</p>
+          <p> On the technical side we've implemented automatic scaling of viewport and performance so the website works on all devices.</p>
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 200px;">Image placeholder</div>
+          <img src="./images/cs2.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
-          <h3>‘This website’</h3>
-          <p>Why it’s called Open Studios
-            Design concept
-            How it’s a virtual tour of the business
+          <h3>Garrett Ray Jewellery</h3>
+          <p>Garrett Ray Jewellery is a local family owned business offering fine jewellery. Open Studios has produced Garrett Ray Jewellery's branding, product designs, marketing support and web development.</p>
+          <p>After conducting a competitor analysis comparing key pages in this category, extensive content upgrades were made to the site resulting in higher traffic and better user engagement.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <img src="./images/cs3.jpg" style=" width: 100%; height: auto;" />
+        </div>
+        <div class="column">
+          <h3>Kamigen: Aircraft Combat game</h3>
+          <p>A browser based flight simulator, Kamigen originally started out as a game project to continue the learnings from Langenium however it has transcended it's origins as just as Three.js game to now being developed in Unreal Engine 5.
           </p>
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <div style="background-color: blue; width: auto; height: 200px;">Image placeholder</div>
+          <img src="./images/cs4.jpg" style=" width: 100%; height: auto;" />
         </div>
         <div class="column">
-          <h3>‘This website’</h3>
-          <p>Why it’s called Open Studios
-            Design concept
-            How it’s a virtual tour of the business
+          <h3>Kamigen: Comics and website</h3>
+          <p>Kamigen is an in house media production currently focused on relaunching its web comics using new art work. The original run of Kamigen spanned four free web comics issues which were produced to create the backstory and lore for the more advanced productions we are now undertaking.
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <img src="./images/cs5.jpg" style=" width: 100%; height: auto;" />
+        </div>
+        <div class="column">
+          <h3>Langenium MMORPG</h3>
+          <p>Langenium was a concept MMORPG built on socket.io, Three.JS and Node.JS. At its height hundreds of monthly visitors could play in a working arcade style arena. Players could anonymously hop into a flying vehicle and shoot one another or one of the the bots flying around the map.
           </p>
         </div>
       </div>
