Tidying up image locations

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		This website requires Javascript for the full experience. As you don't have Javascript enabled, you are seeing
 		the 1999 experience.
 	</noscript>
-	<a id="exitSign"><img src="./exit.svg" title="Return to the office" width="300" height="85" /></a>
+	<a id="exitSign"><img src="./assets/exit.svg" title="Return to the office" width="300" height="85" /></a>
 	<iframe id="pageOverlay"></iframe>
 	<div id="webgl"></div>
 	<script type="module" src="./app.js"></script>
