--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -16,7 +16,7 @@
         <hr class="line">
       </div>
       <div class="h1">
-        <a href="#" title="Home"><img src="../logo-wide.png" alt="Logo"></a>
+        <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
       </div>
       <div class="lineset second">
         <hr class="line">
@@ -46,13 +46,13 @@
       </div>
       <div class="row">
         <div class="column">
-          <img src="../garrett.png" style=" width: 100%; height: auto;" />
+          <img src="./images/garrett.png" style=" width: 100%; height: auto;" />
           <h3>Garrett Kinder - Owner</h3>
           <p>Provide services in developing responsive and interactive front-end solutions using HTML, CSS, JavaScript,
             and frameworks like Vue.</p>
         </div>
         <div class="column">
-          <img src="../paul.jpg" style=" width: 100%; height: auto;" />
+          <img src="./images/paul.jpg" style=" width: 100%; height: auto;" />
           <h3>Paul Brzeski - Owner</h3>
           <p>A self taught technical and creative professional enjoying over 15 years in the industry.</p>
         </div>
