--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -16,7 +16,7 @@
         <hr class="line">
       </div>
       <div class="h1">
-        <a href="#" title="Home"><img src="../logo-wide.png" alt="Logo"></a>
+        <a href="#" title="Home"><img src="./images/logo-wide.png" alt="Logo"></a>
       </div>
       <div class="lineset second">
         <hr class="line">
