Adding new case studies content

--- a/pages/case_studies.html
+++ b/pages/case_studies.html
@@ -51,32 +51,56 @@
       </div>
       <div class="row">
         <div class="column">
-          <img src="./images/cs2.jpg" style=" width: 100%; height: auto;" />
+          <a href="https://www.artstation.com/artwork/YBgKgY" target="_blank" title="Garrett Ray Jewellery case study on Artstation">
+            <img src="./images/cs2.jpg" style=" width: 100%; height: auto;" />
+          </a>
         </div>
         <div class="column">
           <h3>Garrett Ray Jewellery</h3>
-          <p>Garrett Ray Jewellery is a local family owned business offering fine jewellery. Open Studios has produced Garrett Ray Jewellery's branding, product designs, marketing support and web development.</p>
+          <p>Garrett Ray Jewellery is a local family owned business offering fine jewellery. We produced the client branding, product designs, marketing support and web development.</p>
+          <p>The Shopify site build went very smoothly, Shopify's Dawn theme was easily modified to match the brand and we utilised the platforms built-in Git integration to create an auto backup of any site changes to version control.</p>
           <p>After conducting a competitor analysis comparing key pages in this category, extensive content upgrades were made to the site resulting in higher traffic and better user engagement.</p>
+          <h4>
+            <a href="https://www.artstation.com/artwork/YBgKgY" target="_blank" title="Garrett Ray Jewellery case study on Artstation">Read more about this on Artstation</a>
+          </h4>
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <img src="./images/cs3.jpg" style=" width: 100%; height: auto;" />
+          <a href="https://www.artstation.com/artwork/5vPBxP" target="_blank" title="Kamigen Aircraft Combat game case study on Artstation">
+            <img src="./images/cs3.jpg" style=" width: 100%; height: auto;" />
+          </a>
         </div>
         <div class="column">
           <h3>Kamigen: Aircraft Combat game</h3>
-          <p>A browser based flight simulator, Kamigen originally started out as a game project to continue the learnings from Langenium however it has transcended it's origins as just as Three.js game to now being developed in Unreal Engine 5.
-          </p>
+          <p>A browser based flight simulator, this is a game accompaniment to the web comics and animated series we are also producing for the Kamigen project.</p>
+          <p>Originally built in Three.JS, the Kamigen game is being rebuilt in Unreal Engine 5 using more advanced custom shaders and procedural generation techniques for island topography.</p>
+          <p>This is an internal R&D project with no fixed release date.</p>
+          <h4>
+            <a href="https://kamigen.com/game.html" target="_blank" title="Garrett Ray Jewellery case study on Artstation">Play the Kamigen Aircraft Combat game</a>
+          </h4>
+          <h4>
+            <a href="https://www.artstation.com/artwork/5vPBxP" target="_blank" title="Kamigen Aircraft Combat game case study on Artstation">Read more about this on Artstation</a>
+          </h4>
         </div>
       </div>
       <div class="row">
         <div class="column">
-          <img src="./images/cs4.jpg" style=" width: 100%; height: auto;" />
+          <a href="https://openstudios.artstation.com/projects/DvQA60" target="_blank" title="Kamigen comics and website case study on Artstation">
+            <img src="./images/cs4.jpg" style=" width: 100%; height: auto;" />
+          </a>
         </div>
         <div class="column">
           <h3>Kamigen: Comics and website</h3>
-          <p>Kamigen is an in house media production currently focused on relaunching its web comics using new art work. The original run of Kamigen spanned four free web comics issues which were produced to create the backstory and lore for the more advanced productions we are now undertaking.
-          </p>
+          <p>Kamigen is an in house multimedia project about a post apocalyptic solarpunk Earth and it's people with themes celebrating pre-colonial Filipino culture.</p>
+          <p>The original black and white Kamigen comics spanned four free issues which were produced to create the backstory and setting for the more advanced productions now underway.</p>
+          <p>Currently focused on relaunching the Kamigen web comics using new art work (picture to the left).</p>
+          <h4>
+            <a href="https://kamigen.com/comics.html" target="_blank" title="Kamigen original free web comics">Check out the original Kamigen comics</a>
+          </h4>
+          <h4>
+            <a href="https://openstudios.artstation.com/projects/DvQA60" target="_blank" title="Kamigen comics and website case study on Artstation">Read more about this on Artstation</a>
+          </h4>
         </div>
       </div>
       <div class="row">
